nailgun/static/styles/main.less
/* ... */
.modal-open .modal {
  overflow-x: auto;
}

.clamp {
  width: 100%;
  max-width: @page-width;
  margin-left: auto;
  margin-right: auto;
  height: auto !important;
  min-height: 100%;
  &:after {
    .clearfix;
  }
  &.fixed-width-layout {min-width: @page-width;}
}

.content-elements:last-child::after {
  display: block;
  margin: 20px 0;
  margin-bottom: -20px;
  content: "";
  height: 0;
}

// TOOLTIPS

.tooltip-inner {
  max-width: 300px;
}

// ALERTS

.alert {
  border-radius: 3px;
  border: none;
  strong {
    font-size: @base-font-size + 4px;
    line-height: 1px;
  }
  .task-result-details {
    @deployment-result-indent: 5px;
    margin-top: @deployment-result-indent;
    .btn-link {
      padding: 0;
      color: @link-color;
      font-size: @base-font-size - 1px;
    }
    pre {
      background: none;
      border: none;
      padding: 0;
      margin: 0;
      .break-word;
    }
  }
}

.alert-success {
  background-color: @alert-success-bg;
  &, .close {color: @green;}
}

.alert-info {
  background-color: @alert-info-bg;
  &, .close {color: @blue;}
}

.alert-warning {
  background-color: @alert-warning-bg;
  &, .close {color: @orange;}
}

.alert-danger {
  background-color: @alert-danger-bg;
  &, .close {color: @red;}
}

.global-alert {
  margin: 20px 0;
  background: @base-dark-color - 20%;
  font-size: @base-font-size - 1px;
  .text-shadow;
  .close {
    opacity: 1;
    text-shadow: 0 0;
    &:hover {
      opacity: .7;
    }
  }
  strong {
    font-size: @base-font-size + 2px;
    line-height: 1px;
  }
  a {
    color: @link-color + 40%;
    font-size: @base-font-size - 1px;
    &:hover {
      color: @link-color + 20%;
    }
  }
  &.alert-warning {
    &, .close {color: @orange + 50%;}
  }
  &.alert-danger {
    &, .close {color: @red + 50%;}
  }
}

// CUSTOM CHECKBOX/RADIOBUTTON

.custom-tumbler {
  margin: 0 6px 0 0;
  position: relative;
  float: left;
  width: 22px;
  height: 22px;
}

.custom-tumbler input {
  overflow: hidden;
  position: absolute;
  cursor: pointer;
  margin: 5px 0 0 5px;
  width: 22px;
  height: 22px;
  &, &.form-control {
    opacity: 0 !important;
  }
}

.custom-tumbler input + span {
  display: block;
  overflow: hidden;
  font-size: 1px;
  line-height: 0;
  background: url("../img/ui/radio_checkbox.svg") no-repeat 0 0 transparent;
  width: 22px;
  height: 22px;
}

.custom-tumbler input:checked + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat -22px 0px;
}

.custom-tumbler input:indeterminate + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat -44px 0px;
}

.custom-tumbler input[disabled] + span {
  opacity: 0.4;
  cursor: not-allowed;
}

.custom-tumbler input[type=radio] {
  margin-top: 0;
}

.custom-tumbler input[type=radio] + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat 0px -22px;
}

.custom-tumbler input[type=radio]:checked + span {
  background: url("../img/ui/radio_checkbox.svg") no-repeat -22px -22px;
}

// CUSTOM RANGE INPUT

input[type=range] {
  &,
  &:focus,
  &:active,
  &::-moz-focus-inner,
  &:-moz-focusring {
    border: 0 !important;
    outline: none !important;
  }
  &::-ms-track {
    border: inherit;
    color: transparent;
    background: transparent;
    outline: none;
  }
  &::-ms-fill-lower,
  &::-ms-fill-upper {
    background: transparent;
    outline: none;
  }
  &::-ms-tooltip {
    display: none;
  }
  &:disabled {
    opacity: 0.4;
  }
  -webkit-appearance: none;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  width: 100%;
  height: 6px;
  margin: 0;
  border: none;
  border-radius: 3px;
  background: @range-color;
  box-shadow: inset 0 1px 0 0 @range-color - 10%, inset 0 -1px 0 0 @range-color + 10%;
  outline: none;
}

// NAVIGATION

.navbar-bg {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 2;
  width: 100%;
  height: 70px;
  background-color: @white;
  box-shadow: 0 0 10px @shadow-color;
  min-width: @page-width;
}

.navigation-box {
  width: 100%;
}

.navbar {
  border-radius: 0px;
  border: 0px solid transparent;
  margin: 0px;
  min-height: 70px;
  position: relative;
  z-index: 3;
}

.navbar-default {
  background-color: transparent;
  border-color: transparent;
  @navbar-height: 34px;
  .navbar-nav {
    margin: 0;
    margin-top: 18px;
    height: @navbar-height;
    overflow: hidden;
    li {
      display: inline-block;
      width: auto;
      background-color: @white;
      a {
        font-family: 'bebas';
        font-size: @base-font-size + 7;
        color: @navbar-color;
        padding-top: 7px;
        padding-bottom: 0px;
        height: @navbar-height;
        margin-left: 4px;
        -webkit-font-smoothing: antialiased;
        &:hover {
          color: @white;
          background-color: @base-light-color;
          border-radius: 4px;
        }
        &:focus {
          color: @white;
          background-color: @base-light-color;
          border-radius: 4px;
        }
      }
    }
    .active {
      a {
        color: @white;
        background-color: @navbar-color-active;
        border-radius: 4px;
        &:hover {
          color: @white;
          background-color: @navbar-color-active;
          border-radius: 4px;
        }
        &:focus {
          color: @white;
          background-color: @navbar-color-active;
          border-radius: 4px;
        }
      }
    }
  }
}

.navbar-logo {
  float: left;
  height: 60px;
  line-height: 20px;
  padding: 0px;
  margin-top: 2px;
  width: 166px;
  background: url(../img/logos/fuel-logo.svg) no-repeat top left;
}
/* ... */

